--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         mp-ig is eltarthat az első indítás, ami egy esemény elindításával történik meg)
     </p>
     <p>
-        Használat előtt érdemes elolvasni a leírást a <img src="assets/icons/nav/sugo.svg" alt="súgó" height="20px">
+        Használat előtt érdemes elolvasni a súgót a <img src="assets/icons/nav/sugo.svg" alt="súgó" height="20px">
         gombra kattintva
     </p>
 
