--- a/home.html
+++ b/home.html
@@ -79,9 +79,11 @@
                     <img src="./assets/icons/notifications.svg" alt="notifications">
                 </button> -->
                 <p style="margin: auto; font-size: 18px;">A weboldal leírásáért kattintson ide:</p>
-                <button class="small-button" id="help">
-                    <img src="./assets/icons/nav/sugo.svg" alt="help">
-                </button>
+                <a href="help.pdf">
+                    <button class="small-button" id="help">
+                        <img src="./assets/icons/nav/sugo.svg" alt="help">
+                    </button>
+                </a>
                 <a href="cast-sheet.html" target="_blank">
                     <button class="small-button" id="device">
                         <img src="./assets/icons/devices.svg" alt="kotta">
