index.html tökéletesítés

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             border-radius: 10px;
             margin-left: auto;
             margin-right: auto;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -61,7 +62,7 @@
             akkordok
             pontos helyét a szöveghez képest. A TTTCast algoritmusával viszont bármilyen betűtípussal készíthetünk
             kottát,
-            ugyanis az akkordok helyét nem a space-ek biztosítják;) Emellett az akkordok formázása is átláthatóbb és
+            ugyanis az akkordok helyét nem a space-ek biztosítják. Emellett az akkordok formázása is átláthatóbb és
             esztétikusabb megjelenést kölcsönöz a kottának.
         </li>
     </ol>
