Átnevezés (esemény, kotta)
Esemény indítása -> Vetítés indítása
Kották-> Dalok

--- a/home.html
+++ b/home.html
@@ -32,13 +32,13 @@
                     </div>
                     <div class="horizontal-list">
                         <div class="title">
-                            <h2>Kották</h2>
+                            <h2>Dalok</h2>
                             <!-- <button class="sort small-button">
                                 <img src="./assets/icons/sort.svg" alt="sort">
                             </button> -->
                         </div>
                         <div class="items kottak cast">
-                            <!-- A KOTTÁK HELYE -->
+                            <!-- A DALOK HELYE -->
                         </div>
                     </div>
                 </section>
@@ -90,7 +90,7 @@
                 </a>
             </div>
             <button id="esemeny-inditasa" class="main-button big-button">
-                Esemény indítása
+                Vetítés indítása
             </button>
         </div>
     </header>
