--- a/home.html
+++ b/home.html
@@ -162,7 +162,7 @@
             <section class="content">
                 <div class="vertical-list">
                     <div class="title">
-                        <h2>Legutóbbi események</h2>
+                        <h2>Események</h2>
                         <!-- <button class="sort small-button">
                             <img src="./assets/icons/sort.svg" alt="sort">
                         </button> -->
@@ -173,7 +173,7 @@
                 </div>
                 <div class="horizontal-list">
                     <div class="title">
-                        <h2>Legújabb kották</h2>
+                        <h2>Kották</h2>
                         <!-- <button class="sort small-button">
                             <img src="./assets/icons/sort.svg" alt="sort">
                         </button> -->
