--- a/cast-main.html
+++ b/cast-main.html
@@ -17,6 +17,9 @@
     <div id="notification">
         Connected
     </div>
+    <div id="popupwindow" style="display: none;">
+        <div>A szerver foglalt, kérlek próbáld újra később!</div>
+    </div>
     <div id="tapcontainer">
         <div id="tapleft"></div>
         <div id="tapright"></div>
