--- a/cast-sheet.html
+++ b/cast-sheet.html
@@ -45,13 +45,13 @@
     </div>
 
     <div id="foot">
-        <div class="logo">
+        <!-- <div class="logo">
             <h2 class="left">TimeToWorship</h2>
             <img src="./assets/logos/ttt.svg" alt="TTT logo">
             <h2 class="right">TTT - Dicsicsopi</h2>
-        </div>
+        </div> -->
         <div class="felirat">
-            BudaBible® | TimeToTalk worship group - v1
+            BudaBible® | TimeToTalk worship group
         </div>
     </div>
 
