--- a/sheet.html
+++ b/sheet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="./assets/opengarph/opengraph-small.png">
-    <title>Cast (Sheet)</title>
+    <title>Cast (Sheet) - BETA</title>
     <link rel="shortcut icon" href="./assets/logos/ttt.svg" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styles/cast-sheet.css">
@@ -42,13 +42,13 @@
     </div>
 
     <div id="foot">
-        <div class="logo">
+        <!-- <div class="logo">
             <h2 class="left">TimeToWorship</h2>
             <img src="./assets/logos/ttt.svg" alt="TTT logo">
             <h2 class="right">TTT - Dicsicsopi</h2>
-        </div>
+        </div> -->
         <div class="felirat">
-            BudaBible® | TimeToTalk worship group - v1
+            BudaBible® | TimeToTalk worship group
         </div>
     </div>
 
